# futo-basque

./: .gitignore  COMPARISON.md  KEYBOARD_ENGINEERING.md  LICENSE  README.md  RESEARCH.md  TRAINING_PROCESS.md  pyproject.toml  run_server.sh
config/: eu.py
configs/: README.md  datasets.yaml  phase1_corpus.yaml  phase1b_bernat.yaml  phase2_tokenizer.yaml  phase3_pretrain.yaml  phase4_multitask.yaml  phase4a_dataprep.yaml  phase4a_isolated.yaml  phase4b_fulltext.yaml  phase4c_conversational.yaml  phase4d_recovery.yaml  phase5_package.yaml
scripts/corpus/: build_corpus.py  clean_bernat.py
scripts/eval/: autocorrect_diag.py  echo_test.py  ikasbil_test.py  keyboard.py  keystrokes.py  logprob_test.py  nextword_pretrain.py  surprisal_test.py
scripts/finetune/: build_wordfreq.py  conversational.py  diag_4m_loss.py  fulltext.py  generate_triples.py  isolated.py  multitask.py  recovery.py  watch_4mr.sh
scripts/lib/: datasets.py  plw_trainer.py  progress.py  real_eval_callback.py  runconfig.py  typo_synthesis.py
scripts/package/: build_wordlist.py  compare_dicts.sh  compare_full.py  compile_dict.sh  downgrade_v2.py  patch_gguf_bos.py  patch_metadata.py  to_gguf.py
scripts/pretrain/: bench_l40.py  bench_pretok.py  diag_objective.py  diag_watcher.sh  train.py
scripts/reference/: dump_slot_map.py  inspect_model.py  verify_slot_layout.py
scripts/tokenizer/: train.py
